recursion.lessons.recursion.koch.Koch.scala.error
Koch:13: error: not found: value level
	if (level==0) {
            ^Koch:17: error: not found: value snowside
		snowside(levels,length-1)
                ^